--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -159,11 +159,17 @@ jobs:
     name: Release AIO
     runs-on: ubuntu-latest
     needs: [install-test-windows, install-test-linux]
-    # if: github.ref_type == 'tag'
+    if: github.ref_type == 'tag'
 
     steps:
     - name: Download artifact from build workflow
       uses: actions/download-artifact@v2
+
+    - name: Get released file names
+      run: |
+        echo "EXE_FILE=$(ls windows-package/*.exe | head -1)" >> $GITHUB_ENV
+        echo "DEB_FILE=$(ls linux-package/*.deb | head -1)" >> $GITHUB_ENV
+        echo "RELEASE_VERSION=${TAG_NAME#rel/aio/}" >> $GITHUB_ENV
 
     - name: Create Release
       id: create_release
@@ -171,9 +177,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        # tag_name: v${{ env.TAG_NAME }}
-        tag_name: rel/aio/1.1.1.1
-        release_name: RobotFramework AIO version ${{ env.TAG_NAME }}
+        tag_name: v${{ env.TAG_NAME }}
+        release_name: RobotFramework AIO version ${{ env.RELEASE_VERSION }}
         draft: false
         prerelease: false
 
@@ -183,8 +188,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./*.exe
-        asset_name: setup_RobotFramework_AIO_Win_${{ env.TAG_NAME }}.exe
+        asset_path: ${{ env.EXE_FILE }}
+        asset_name: setup_RobotFramework_AIO_Win_${{ env.RELEASE_VERSION }}.exe
         asset_content_type: application/octet-stream
 
     - name: Upload Linux Release Asset
@@ -193,6 +198,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./*.deb
-        asset_name: setup_RobotFramework_AIO_Linux_${{ env.TAG_NAME }}.deb
+        asset_path: ${{ env.DEB_FILE }}
+        asset_name: setup_RobotFramework_AIO_Linux_${{ env.RELEASE_VERSION }}.deb
         asset_content_type: application/vnd.debian.binary-package
