--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -1,9 +1,3 @@
-; pypandoc in linux need to run setup.py with arguement before install
-[pypandoc]
-url=https://github.com/NicklasTegner/pypandoc
-name=pypandoc
-prebuild=build_pandoc_bin.sh
-
 [github]
 python-genpackagedoc=
 python-extensions-collection=
@@ -16,7 +10,11 @@ robotframework=
 robotframework-extensions-collection=
 robotframework-qconnect-base=
 robotframework-selftest=
-robotframework-testsuitesmanagement=
+[testsuit]
+   robotframework-testsuitesmanagement=
+   #this will run after python-genpackagedoc
+   prebuild=overwirte_version.sh
+
 robotframework-tutorial=
 robotframework-robotlog2rqm=
 robotframework-robotlog2db=
