--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -13,6 +13,7 @@ on:
   workflow_dispatch:
 
 env:
+  GITHUB_PAT : ${{ secrets.PAT_GITHUB }} 
   TRIGGER_BY: ${{ github.ref_type }}
   TAG_NAME: ${{ github.ref_name }}
   REF_NAME: ${{ github.ref_name }}
@@ -20,9 +21,27 @@ env:
   DOCBUILDER_ARGUMENTS: --configfile "./maindoc_configs/maindoc_config_OSS.json"
 
 jobs:
+  tag-repos:
+    name: Tag all related repositories
+    runs-on: ubuntu-latest
+    if: github.ref_type == 'tag'
+
+    steps:
+    - name: Checkout source
+      uses: actions/checkout@v3
+
+    - name: Install dependencies
+      run: python -m pip install -r ./tools/git-tag/requirements.txt
+
+    - name: Tag repositories
+      run: python ./tools/git-tag/git-tag.py "$TAG_NAME" ./config/repositories/tag_repos.json
+
   build-linux:
     name: Build Linux package
     runs-on: ubuntu-latest
+    needs: tag-repos
+    # if: always() && needs.tag-repos.result != 'failure' && needs.tag-repos.result != 'cancelled'
+    if: ${{ ! failure() && ! cancelled() }}
 
     steps:
       - name: Checkout source
@@ -57,8 +76,11 @@ jobs:
   build-windows:
     name: Build Windows package
     runs-on: windows-latest
+    needs: tag-repos
+    if: ${{ ! failure() && ! cancelled() }}
     env:
       GENDOC_LATEXPATH: C:/texlive/2022/bin/win32
+
     steps:
       - name: Support long path in git
         run: git config --system core.longpaths true
