--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -124,7 +124,7 @@ jobs:
       shell: cmd
       run: |
         set Robot
-        "%RobotPythonPath%/python" test/aio-test-trigger/aio-test-trigger.py
+        "%RobotPythonPath%/python" test/aio-test-trigger/aio-test-trigger.py --params "PYTHONINTERPRETER='%RobotPythonPath%/python.exe'"
 
   install-test-linux:
     name: Test Linux package
@@ -155,7 +155,10 @@ jobs:
         . /opt/rfwaio/linux/set_robotenv.sh
         printenv | grep Robot
         echo $(which pandoc)
-        $RobotPythonPath/python3.9 test/aio-test-trigger/aio-test-trigger.py
+        echo $HOME
+        ls -alh $HOME
+        ls -alh $RobotTutorialPath
+        $RobotPythonPath/python3.9 test/aio-test-trigger/aio-test-trigger.py --params "PYTHONINTERPRETER=$RobotPythonPath/python3.9"
 
   release:
     name: Release AIO
