--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -70,7 +70,6 @@ jobs:
     name: Build Linux package
     runs-on: ubuntu-latest
     needs: [ tag-repos , trigger-aio ]
-    # if: always() && needs.tag-repos.result != 'failure' && needs.tag-repos.result != 'cancelled'
     if: ${{ ! failure() && ! cancelled() }}
 
     steps:
@@ -107,6 +106,7 @@ jobs:
           ./build
 
       - name: Update all documents
+        if: ${{ github.ref_type == 'tag' }}
         run: |
           cd ../robotframework-documentation
           doc_branch=htv3hc/feat/auto-update-doc
@@ -121,12 +121,11 @@ jobs:
           git push -u -f doc-repo $doc_branch
           echo -e "\e[32;01mPush all changes completely ... \e[0m"
           
-          # curl -X POST https://api.github.com/repos/test-fullautomation/robotframework-documentation/dispatches \
-          # --header 'authorization: Bearer ${{ secrets.ACTIONS_KEY }}' \
-          # -H 'Accept: application/vnd.github.everest-preview+json' \
-          # --data '{"event_type": "Document", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'", "branch" : '"$doc_branch"'}}'
-          
-          # echo -e "\e[32;01m Trigger jobs for pull request ...\e[0m"
+          curl -X POST https://api.github.com/repos/test-fullautomation/robotframework-documentation/dispatches \
+          --header 'authorization: Bearer ${{ secrets.ACTIONS_KEY }}' \
+          -H 'Accept: application/vnd.github.everest-preview+json' \
+          --data '{"event_type": "Document", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'", "branch" : '"$doc_branch"'}}'
+          echo -e "\e[32;01m Trigger jobs for pull request ...\e[0m"
 
       - name: Upload built package
         uses: actions/upload-artifact@v3
@@ -150,7 +149,7 @@ jobs:
       - name: Install dependencies and set environment variables
         shell: bash
         run: |
-          . ./requirements_windows -e.sh
+          . ./requirements_windows.sh
           echo "GENDOC_LATEXPATH=$GENDOC_LATEXPATH" >> $GITHUB_ENV
           echo "AIO_VERSION_DATE=$(date +%m.%Y)" >> $GITHUB_ENV
           echo "AIO_VERSION=${TAG_NAME#[rd]e[vl]/aio/}" >> $GITHUB_ENV
