--- a/tools/release_info/release_main_info.json
+++ b/tools/release_info/release_main_info.json
@@ -28,7 +28,7 @@
                "RELEASENOTES"    : ["
 Dear team,
 
-| After hard work we are proud to announce a **new release of the RobotFramework AIO (All In One) for Windows 10 and OSD6 Linux and Apertis**.
+| after hard work we are proud to announce a **new release of the RobotFramework AIO (All In One) for Windows 10 and OSD6 Linux and Apertis**.
 | Please feel free to give any feedback about your experiences and wishes!
 
 Feel free to contact us when you use **RobotFramework AIO** the first time. We are keen to support you!
